# dive-into-modern-cpp

./: .clang-format  .gitignore  GEMINI.md  README.md  ROADMAP.md
patterns/: ScopeBenchmarker.hpp
patterns/ring-buffer/: LowLatencyRingBuffer.hpp
patterns/thread-confined-object-pool/: CMakeLists.txt  FixedObjectPool.hpp  main.cpp
phase-1-coroutines/: CMakeLists.txt  README.md
phase-1-coroutines/tests/: test_main.cpp
phase-1-lambdas/: README.md
phase-1-lambdas/src/: production_example.cpp
phase-1-modules/: README.md
phase-1-move-semantics/src/: basic_example.cpp  production_example.cpp
phase-1-perfect-forwarding/: README.md
phase-1-perfect-forwarding/src/: production_example.cpp
phase-1-raii-smart-pointers/: README.md
phase-1-raii-smart-pointers/src/: basic_example.cpp  production_example.cpp
phase-1-raii-smart-pointers/tests/: test_main.cpp
phase-1-type-safety/: README.md
phase-1-type-safety/src/: basic_example.cpp
phase-1-type-safety/tests/: test_main.cpp
phase-1-value-categories/: README.md
phase-1-value-categories/src/: basic_example.cpp
phase-1-views/: CMakeLists.txt  README.md
phase-1-views/src/: production_example.cpp
phase-1/coroutines/src/: basic_example.cpp
phase-1/lambdas/: CMakeLists.txt
phase-1/lambdas/benchmarks/: bench_main.cpp
phase-1/lambdas/src/: basic_example.cpp
phase-1/lambdas/tests/: test_main.cpp
phase-1/modules/: CMakeLists.txt
phase-1/modules/build_ninja/: CMakeCache.txt  cmake_install.cmake
phase-1/modules/src/: Math.cppm  main.cpp
phase-1/move-semantics/: CMakeLists.txt  README.md
phase-1/move-semantics/src/: noexcept_bench.cpp
phase-1/move-semantics/tests/: socket_test.cpp
phase-1/perfect-forwarding/: CMakeLists.txt
phase-1/perfect-forwarding/src/: basic_example.cpp
phase-1/perfect-forwarding/tests/: test_main.cpp
phase-1/raii-smart-pointers/: CMakeLists.txt
phase-1/type-safety/: CMakeLists.txt
phase-1/type-safety/src/: production_example.cpp
phase-1/value-categories/: CMakeLists.txt
phase-1/value-categories/src/: copy_elision_example.cpp  production_example.cpp
phase-1/value-categories/tests/: test_main.cpp
phase-1/views/src/: basic_example.cpp
phase-1/views/tests/: test_main.cpp
